--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iteratorshq",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "expo": "~54.0.22",
+    "expo-constants": "^18.0.10",
     "expo-status-bar": "~3.0.8",
+    "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "dotenv": "^17.2.3",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   },
   "private": true
